# AvnetAzureSphereStarterKitReferenceDesign

./: .gitignore  .gitmodules  AvnetStarterKitReferenceDesign.sln  README.md
AvnetStarterKitReferenceDesign/: AvnetStarterKitReferenceDesign.vcxproj  AvnetStarterKitReferenceDesign.vcxproj.filters  CMakeLists.txt  CMakeSettings.json  app_manifest.json  azure_iot_utilities.c  azure_iot_utilities.h  build_options.h  connection_strings.h  deviceTwin.h  device_twin.c  i2c.c  i2c.h  lsm6dso_reg.c  main.c  mt3620_avnet_dev.h  mt3620_rdb.h
ClickLib/: ClickLib.vcxproj  ClickLib.vcxproj.filters
